@@ -4,7 +4,7 @@ confdir = $(sysconfdir)
 dist_conf_DATA = lightdm.conf
 
 dbusconfdir = $(DBUS_SYS_DIR)
-dist_dbusconf_DATA = org.lightdm.LightDisplayManager.conf
+dist_dbusconf_DATA = org.freedesktop.DisplayManager.conf
 
 dist_man1_MANS = lightdm.1
 
