@@ -1,0 +1,20 @@
+<!DOCTYPE busconfig PUBLIC
+ "-//freedesktop//DTD D-BUS Bus Configuration 1.0//EN"
+ "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
+<busconfig>
+
+  <!-- Only root can own the service -->
+  <policy user="root">
+    <allow own="org.freedesktop.DisplayManager"/>
+  </policy>
+
+  <policy context="default">
+    <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DBus.Properties"/>
+    <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DBus.Introspectable"/>
+    <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager"/>
+    <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager.Display"/>
+    <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager.Users"/>
+    <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager.Session"/>
+  </policy>
+
+</busconfig>
